# ShapePP

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
libshapepp/: CMakeLists.txt
libshapepp/include/: common.h  constraint.h  force.h  ls_solver.h  solver.h  types.h
libshapepp/src/: check.h  common.h  constraint.cpp  force.cpp  force.h  internal_macros.h  logging.h  ls_solver.cpp  solver.cpp
